--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,13 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>2.6.5</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.3.2.Final</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
